# ChangeLog for kde-base/kdebase
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase/ChangeLog,v 1.158 2004/11/07 23:24:45 pylon Exp $

  08 Nov 2004; Lars Weiler <pylon@gentoo.org> kdebase-3.3.1.ebuild:
  Stable on ppc.

  04 Nov 2004; Jason Wever <weeve@gentoo.org> kdebase-3.3.1.ebuild:
  Stable on sparc wrt security bug #69936.

  03 Nov 2004; Bryan Østergaard <kloeri@gentoo.org> kdebase-3.3.1.ebuild:
  ~alpha keyword.

  03 Nov 2004; Caleb Tennis <caleb@gentoo.org> kdebase-3.3.1.ebuild:
  x86 stable

  13 Oct 2004; Caleb Tennis <caleb@gentoo.org> files/3.3.1/kdmrc,
  files/3.3.1/startkde-3.3.1-gentoo.diff:
  Providing a new kdmrc from bug #61499

*kdebase-3.3.1 (12 Oct 2004)

  12 Oct 2004; Caleb Tennis <caleb@gentoo.org> +files/3.3.1/Xsetup,
  +files/3.3.1/backgroundrc, +files/3.3.1/kdmrc,
  +files/3.3.1/startkde-3.3.1-gentoo.diff, +kdebase-3.3.1.ebuild:
  Version bump

  04 Oct 2004; Guy Martin <gmsoft@gentoo.org> kdebase-3.3.0.ebuild:
  Stable on hppa.

  19 Sep 2004; Malcolm Lashley <malc@gentoo.org> kdebase-3.3.0.ebuild:
  Stable on amd64

  14 Sep 2004; Jason Wever <weeve@gentoo.org> kdebase-3.3.0.ebuild:
  Stable on sparc.

  09 Sep 2004; Caleb Tennis <caleb@gentoo.org> -kdebase-3.2.1.ebuild,
  -kdebase-3.2.3.ebuild:
  Remove old files, mark 3.3.0 x86 stable

  07 Sep 2004; Carsten Lohrke <carlo@gentoo.org> +files/3.3.0-sasl-fix.diff,
  kdebase-3.3.0.ebuild:
  proper sasl fix

  30 Aug 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  kdebase-3.1.5.ebuild, kdebase-3.2.1.ebuild, kdebase-3.2.3.ebuild,
  kdebase-3.3.0.ebuild:
  Masked kdebase-3.3.0.ebuild stable for ppc

  30 Aug 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  kdebase-3.1.5.ebuild, kdebase-3.2.1.ebuild, kdebase-3.2.3.ebuild:
  Masked kdebase-3.2.3.ebuild stable for ppc

  30 Aug 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  kdebase-3.1.5.ebuild, kdebase-3.2.1.ebuild: