@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdemultimedia
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia/ChangeLog,v 1.133 2004/11/07 23:37:07 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia/ChangeLog,v 1.134 2004/11/17 11:18:23 kloeri Exp $
+
+  17 Nov 2004; Bryan Østergaard <kloeri@gentoo.org>
+  kdemultimedia-3.3.1.ebuild:
+  Stable on alpha.
 
   08 Nov 2004; Joseph Jezak <josejx@gentoo.org> kdemultimedia-3.3.1.ebuild:
   Marked ppc stable.
